--- a/static/main_page.css
+++ b/static/main_page.css
@@ -1,4 +1,4 @@
-tml, body {
+html, body {
     margin: 0;
     padding: 0;
 }
@@ -148,4 +148,39 @@ button:hover {
     font-size: 20px;
     font-weight: normal;
     vertical-align: 5px;
+}
+
+/* Общие стили для кастомных элементов формы */
+.custom-checkbox {
+    position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px; /* Добавьте отступ, если нужно */
+}
+
+.custom-checkbox input[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+/* Стили для отображения галочки при выборе */
+.custom-checkbox input[type="checkbox"]:checked::before {
+    content: "\2713"; /* Юникод для галочки */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 16px;
+    color: white;
+}
+
+/* Общие стили для текста рядом с чекбоксом */
+.checkbox-label {
+    font-family: Montserrat, sans-serif;
+    font-size: 20px;
+    color: white;
 }
