some changes to checkboxes

--- a/templates/select_delivery.html
+++ b/templates/select_delivery.html
@@ -93,12 +93,12 @@ function redirectToMain() {
                 <form  method="POST" id="checkbox-form">{% csrf_token %}
                     <div>
                         <label>
-                            <input class="check" type="checkbox" name="send to partner pvz" id="checkbox-1" value="option1">Отправить на партнёрские ПВЗ
+                            <input class="custom-checkbox" type="checkbox" name="send to partner pvz" id="checkbox-1" value="option1">Отправить на партнёрские ПВЗ
                         </label>
                     </div>
                     <div>
                         <label>
-                            <input class="check" type="checkbox" name="send to NOpartner pvz" id="checkbox-2" value="option2">Отправить на непартнёрские ПВЗ
+                            <input class="custom-checkbox" type="checkbox" name="send to NOpartner pvz" id="checkbox-2" value="option2">Отправить на непартнёрские ПВЗ
                         </label>
                     </div>
                     {#<button type="button" onclick= RETURN TO MAIN">"></button>#}
