--- a/static/main_page.css
+++ b/static/main_page.css
@@ -152,35 +152,16 @@ button:hover {
 
 /* Общие стили для кастомных элементов формы */
 .custom-checkbox {
+    color: white;
+    font-family: Montserrat, sans-serif;
+    font-size: 25px;
+    width: 800px;
+    font-weight: normal;
+    margin-left: 52px;
+    margin-top: 60px;
     position: relative;
     display: inline-block;
     width: 20px;
     height: 20px;
     margin-right: 10px; /* Добавьте отступ, если нужно */
-}
-
-.custom-checkbox input[type="checkbox"] {
-    opacity: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-}
-
-/* Стили для отображения галочки при выборе */
-.custom-checkbox input[type="checkbox"]:checked::before {
-    content: "\2713"; /* Юникод для галочки */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 16px;
-    color: white;
-}
-
-/* Общие стили для текста рядом с чекбоксом */
-.checkbox-label {
-    font-family: Montserrat, sans-serif;
-    font-size: 20px;
-    color: white;
 }
