--- a/static/main_page.css
+++ b/static/main_page.css
@@ -150,14 +150,55 @@ button:hover {
     vertical-align: 5px;
 }
 
-/* Общие стили для кастомных элементов формы */
+.button {
+    margin-bottom: 45px;
+}
+.check {
+    margin-top: 80px;
+}
+
 .custom-checkbox {
-    color: white;
-    margin-left: 150px;
-    margin-top: 60px;
-    position: relative;
+    display: none;
+}
+
+label {
+    color: #FFFF;
+    cursor: default;
+    font-family: Montserrat, sans-serif;
+    font-weight: normal;
+    font-size: 25px;
+    padding-bottom: 100px;
+    vertical-align: middle;
+    margin-left: 120px;
+}
+   
+label:before {
+    content: " ";
     display: inline-block;
-    width: 20px;
-    height: 20px;
-    margin-right: 10px; /* Добавьте отступ, если нужно */
+    margin-right: 15px;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    background: rgba(21, 24, 30, 1);
+    border: 4px solid white;
+    border-radius: 13px;
+    vertical-align: middle;
+}
+
+input:checked + label:before {
+    background-color: #95E6D6;
+    padding: -4px;
+}
+
+.error {
+    color: #FF5858;
+    font-family: Montserrat, sans-serif;
+    font-size: 25px;
+    font-weight: normal;
+    margin-left: 70px;
+}
+
+.err {
+    margin-bottom: 40px;
+    margin-top: -10px;
 }
