--- a/templates/delivery_detail.html
+++ b/templates/delivery_detail.html
@@ -113,21 +113,21 @@ function redirectToMain() {
                             <th>price</th>
                           </tr>
                           <tr>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
-                            <td><input></td>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
+                            <th><input></th>
                           </tr>
                         </thead>
                         <tbody>
