--- a/static/delivery_detail.css
+++ b/static/delivery_detail.css
@@ -12,7 +12,6 @@ html, body {
 
 .block-left {
     background-color: rgba(24, 32, 38, 1);
-    height: 100vh;
     width: 25%;
 }
 
@@ -76,7 +75,7 @@ h1 {
     margin-bottom: 50px;
 }
 
-button {
+.button-one {
     height: 64px;
     width: 120px;
     background-color:#95E6D6;
@@ -95,7 +94,7 @@ button {
     margin-top: 50px;
 }
 
-button:hover {
+.button-one:hover {
 	background: rgba(0,0,0,0);
 	color: #95E6D6;
 	box-shadow: inset 0 0 0 3px #95E6D6;
@@ -188,6 +187,7 @@ button:hover {
     scrollbar-width: 10px;
     overflow-y: scroll;
     overflow-x: scroll;
+    margin-bottom: 20px;
 }
 
 table {
@@ -231,4 +231,58 @@ input {
 .scroll:nth-child(2n) {
     background-color: #F5FAFF;
 }
-  
+
+.but-delivery {
+    margin-top: -65px;
+    margin-bottom: 20px;
+}
+
+.button-delivery {
+    height: 58px;
+    width: 300px;
+    background-color:#95E6D6;
+    border: 2px solid #95E6D6;
+    border-radius: 20px;
+    color: black;
+    line-height: 30.48px;
+    font-weight: bold;
+    font-family: Montserrat, sans-serif;
+    font-size: 22px;
+    padding: auto;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-left: 50px;
+    margin-right: -20px;
+}
+
+.button-delivery-two {
+    height: 58px;
+    width: 300px;
+    background-color:#FF5858;
+    border: 2px solid #FF5858;
+    border-radius: 20px;
+    color: black;
+    line-height: 30.48px;
+    font-weight: bold;
+    font-family: Montserrat, sans-serif;
+    font-size: 22px;
+    padding: auto;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-left: 50px;
+    margin-top: 50px;
+}
+
+.button-delivery-two:hover {
+	background: rgba(0,0,0,0);
+	color: #FF5858;
+	box-shadow: inset 0 0 0 3px #FF5858;
+}
+
+.button-delivery:hover {
+	background: rgba(0,0,0,0);
+	color: #95E6D6;
+	box-shadow: inset 0 0 0 3px #95E6D6;
+}
