--- a/templates/delivery_detail.html
+++ b/templates/delivery_detail.html
@@ -81,7 +81,7 @@ function redirectToMain() {
                 <div class="text">
                     <h1 class="fill">История выдач</h1>
                     <div class="button">
-                        <button type="button">Назад</button>
+                        <button class="button-one" type="button">Назад</button>
                         <h1 class="but">Главная</h1>
                         <h1 class="bet">/</h1>
                         <h1 class="bat">Выдать товары</h1>
@@ -91,6 +91,11 @@ function redirectToMain() {
                         <h1 class="bot">04.07.2023</h1>
                     </div>
                     <h2 class="fill_grade">Выдача завершена</h2>
+                    <div class="but-delivery">
+                        <button class="button-delivery" type="button">Довыдать товары</button>
+                        <button class="button-delivery" type="button">Скачать EXCEL</button>
+                        <button class="button-delivery-two" type="button">Завершить выдачу</button>
+                    </div>
                 </div>
                 <div class="prokrutka">
                     <table>
