--- a/templates/delivery_detail.html
+++ b/templates/delivery_detail.html
@@ -90,12 +90,15 @@ function redirectToMain() {
                         <h1 class="bet">/</h1>
                         <h1 class="bot">04.07.2023</h1>
                     </div>
-                    <h2 class="fill_grade">Выдача завершена</h2>
+                    {% if is_active %}
                     <div class="but-delivery">
                         <button class="button-delivery" type="button">Довыдать товары</button>
                         <button class="button-delivery" type="button">Скачать EXCEL</button>
                         <button class="button-delivery-two" type="button">Завершить выдачу</button>
                     </div>
+                    {% else %}
+                    <h2 class="fill_grade">Выдача завершена</h2>
+                    {% endif %}
                 </div>
                 <div class="prokrutka">
                     <table>
