--- a/static/delivery_detail1.css
+++ b/static/delivery_detail1.css
@@ -202,6 +202,7 @@ th {
     height: 10px;
     padding-left: 5px;
     padding-right: 5px;
+    white-space: nowrap;
     border: 1px solid #98A4A6;
     border-collapse: collapse;
     color: rgba(24, 32, 38, 1);
@@ -215,6 +216,7 @@ td {
     color: rgba(24, 32, 38, 1);
     height: 10px;
     padding: 10px;
+    white-space: nowrap;
     font-weight: normal;
     font-family: Montserrat, sans-serif;
     border: 1px solid #98A4A6; 
