some changes with button Продолжить in send courier

--- a/templates/send_courier.html
+++ b/templates/send_courier.html
@@ -99,7 +99,7 @@ function redirectToMain() {
                 </div>
 
         </div>
-        <form
+        </form>
     </body>
     {%  endblock %}
 </html>
