--- a/static/main_page.css
+++ b/static/main_page.css
@@ -6,7 +6,6 @@ html, body {
 .split-container {
     width: 100%;
     display: flex;
-    height: 100vh;
 }
 
 .block-left {
@@ -161,6 +160,11 @@ button:hover {
     display: none;
 }
 
+.check-box {
+    margin-left: -5%;
+    padding: -30px;
+}
+
 label {
     color: #FFFF;
     cursor: default;
@@ -201,4 +205,88 @@ input:checked + label:before {
 .err {
     margin-bottom: 40px;
     margin-top: -10px;
+}
+
+.but {
+    color: white;
+    font-family: Roboto, sans-serif;
+    font-size: 20px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: 0;
+    margin-top: 60px;
+}
+
+.bet {
+    color: white;
+    font-family: Roboto, sans-serif;
+    font-size: 20px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: -80px;
+    margin-top: 60px;
+}
+.bat {
+    color: white;
+    font-family: Roboto, sans-serif;
+    font-size: 20px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: -80px;
+    margin-top: 60px;
+}
+
+.ruf {
+    height: 64px;
+    width: 120px;
+    background-color:#95E6D6;
+    border: 2px solid #95E6D6;
+    border-radius: 20px;
+    color:  black;
+    line-height: 30.48px;
+    font-weight: 700;
+    font-family: Montserrat, sans-serif;
+    text-align: center;
+    padding: 2px 4px;
+    font-size: 25px;
+    text-decoration: none;
+    cursor: pointer;
+    margin-left: 55px;
+    margin-top: 5%;
+}
+
+.ruf:hover {
+    height: 64px;
+    width: 120px;
+    background-color: #15181EFF;
+    border: 2px solid #95E6D6;
+    border-radius: 20px;
+    color: #95E6D6;
+    line-height: 30.48px;
+    font-weight: 700;
+    font-family: Montserrat, sans-serif;
+    font-size: 25px;
+    padding: 2px 4px;
+    text-decoration: none;
+    cursor: pointer;
+    margin-left: 75px;
+    margin-top: 50px;
+}
+
+.fill_grid {
+    color: white;
+    font-family: Montserrat, sans-serif;
+    font-size: 25px;
+    width: 800px;
+    font-weight: bold;
+    margin-left: 52px;
+    margin-top: 60px;
+}
+
+.addBlockButton {
+    height: 40px;
+    width: 20px;
+    background-color: #6B6B6B;
+    border: 1px solid #6B6B6B;
+    border-radius: 5;
 }
