--- a/static/main_page.css
+++ b/static/main_page.css
@@ -6,6 +6,7 @@ html, body {
 .split-container {
     width: 100%;
     display: flex;
+    height: 100%;
 }
 
 .block-left {
@@ -281,39 +282,36 @@ input:checked + label:before {
 }
 
 .addBlockButton {
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     background-color: #6B6B6B;
     border: 1px solid #6B6B6B;
-    border-radius: 5;
-    padding-top: 0;
-    padding-left: 0;
+    color: #FFFFFF;
+    font-size: 30px;
+    border-radius: 10px;
+    padding: 0px 4px;
 }
 
 .addBlockButton:hover {
-    height: 64px;
-    width: 120px;
+    height: 40px;
+    width: 40px;
     background-color: #15181EFF;
-    border: 2px solid #95E6D6;
-    border-radius: 20px;
-    color: #95E6D6;
-    line-height: 30.48px;
-    font-weight: 700;
+    border: 2px solid #6B6B6B;
+    border-radius: 10px;
+    color: #6B6B6B;
     font-family: Montserrat, sans-serif;
-    font-size: 25px;
+    font-size: 30px;
     padding: 2px 4px;
     text-decoration: none;
     cursor: pointer;
-    margin-left: 4%;
-    margin-top: 5%;
 }
 
 .block {
     background-color: white;
     height: 50px;
     width: 1050px;
-    margin-top: 15px;
-    margin-left: 53px;
+    margin-top: 1%;
+    margin-left: 4%;
     color: rgba(244, 244, 248, 1);
     border: 2px solid rgba(244, 244, 248, 1);
     border-radius: 10px;
@@ -423,3 +421,4 @@ input:checked + label:before {
     margin-left: 0;
     margin-top: 60px;
 }
+
