--- a/static/main_page.css
+++ b/static/main_page.css
@@ -163,7 +163,8 @@ button:hover {
 
 .check-box {
     margin-left: -5%;
-    padding: -30px;
+    margin-top: 3%;
+    padding-bottom: 0;
 }
 
 label {
@@ -281,7 +282,18 @@ input:checked + label:before {
     margin-top: 60px;
 }
 
+.fill_grad {
+    color: white;
+    font-family: Montserrat, sans-serif;
+    font-size: 25px;
+    width: 800px;
+    font-weight: bold;
+    margin-left: 0;
+}
+
 .addBlockButton {
+    margin-left: 75%;
+    margin-top: 1%;
     height: 40px;
     width: 40px;
     background-color: #6B6B6B;
@@ -293,6 +305,8 @@ input:checked + label:before {
 }
 
 .addBlockButton:hover {
+    margin-left: 75%;
+    margin-top: 1%;
     height: 40px;
     width: 40px;
     background-color: #15181EFF;
@@ -304,6 +318,10 @@ input:checked + label:before {
     padding: 2px 4px;
     text-decoration: none;
     cursor: pointer;
+}
+
+.butt-one {
+    margin-bottom: 4%;
 }
 
 .block {
@@ -407,7 +425,7 @@ input:checked + label:before {
     font-size: 15px;
     width: 735px;
     font-weight: normal;
-    margin-left: 0;
+    margin-left: 5px;
     margin-top: 60px;
 }
 
@@ -418,7 +436,131 @@ input:checked + label:before {
     font-size: 15px;
     width: 735px;
     font-weight: normal;
+    margin-left: 2px;
+    margin-top: 60px;
+}
+
+.block-new {
+    background-color: white;
+    height: 50px;
+    width: 1200px;
+    margin-top: 1%;
+    margin-left: 4%;
+    color: rgba(244, 244, 248, 1);
+    border: 2px solid rgba(244, 244, 248, 1);
+    border-radius: 10px;
+}
+
+.text-one-new {
+    padding-left: 5%;
+    color: #FDFDFF;
+    font-family: Roboto, sans-serif;
+    font-size: 15px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: 10%;
+    margin-top: 60px;
+}
+
+.text-two-new {
+    padding-left: 15%;
+    color: #FDFDFF;
+    font-family: Roboto, sans-serif;
+    font-size: 15px;
+    width: 735px;
+    font-weight: normal;
     margin-left: 0;
     margin-top: 60px;
 }
 
+.text-three-new {
+    padding-left: 9.8%;
+    color: #FDFDFF;
+    font-family: Roboto, sans-serif;
+    font-size: 15px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: 0;
+    margin-top: 60px;
+}
+
+.text-four-new {
+    padding-left: 4%;
+    color: #FDFDFF;
+    font-family: Roboto, sans-serif;
+    font-size: 15px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: 2%;
+    margin-top: 60px;
+}
+
+.text-five-new {
+    padding-left: 7.5%;
+    color: #FDFDFF;
+    font-family: Roboto, sans-serif;
+    font-size: 15px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: 2px;
+    margin-top: 60px;
+}
+
+.check-text {
+    margin-top: -5.5%;
+    margin-left: 8%;
+}
+
+.check-text-one {
+    padding-left: 5%;
+    color: #000;
+    font-family: Montserrat, sans-serif;
+    font-size: 15px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: 0;
+    margin-top: 60px;
+}
+
+.check-text-two {
+    padding-left: 15%;
+    color: #000;
+    font-family: Montserrat, sans-serif;
+    font-size: 15px;
+    width: 735px;
+    font-weight: normal;
+    margin-left: -4%;
+    margin-top: 60px;
+}
+
+
+
+
+
+.custom-checkbox {
+    display: none;
+}
+
+.check-box-new {
+    margin-left: -100px;
+    margin-top: 0.7%;
+    padding-bottom: 0;
+}
+
+.label:before {
+    content: " ";
+    display: inline-block;
+    margin-right: 15px;
+    position: relative;
+    width: 25px;
+    height: 25px;
+    background: white;
+    border: 4px solid rgba(24, 32, 38, 1);
+    border-radius: 10px;
+    vertical-align: middle;
+}
+
+input:checked + .label:before {
+    background-color: rgba(24, 32, 38, 1);
+    padding: -4px;
+}
